syntax = "proto3";

// protoc 编译 .proto 文件后，生成的java源文件是一个还是多个。
option java_multiple_files = false;

// protoc 编译 .proto 文件，生成的java源代码放在哪个包里。
option java_package = "com.grpc.demo.api.grpc";

option java_outer_classname = "HelloMessage";

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string result = 1;
}

service HelloService {
  rpc hello1(HelloRequest) returns(HelloResponse) {}
  rpc hello2(HelloRequest) returns(stream HelloResponse) {}
  rpc hello3(stream HelloRequest) returns(HelloResponse) {}
  rpc hello4(stream HelloRequest) returns(stream HelloResponse) {}
}
